tests/negative/test_call_dyn_scope.orb
fnc foo () () {
    = a 0;
};

fnc main () () {
    sym (a 0);
    foo;
};